--- a/node-app/test_console_logging.html
+++ b/node-app/test_console_logging.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <script>
+      // Demonstrate the usage of the JavaScript console for logging messages,
+      // variables, objects, and handling errors.
       console.log("Hello, this is a console log message!");
 
       // Testing with variables
